[package]
name = "boson_lowerer"
version = "1.1.0"
edition = "2024"
authors = ["The Quark3 Contributors"]

description = "The Boson3 lowerer and desugarer ontop of Quark3"
readme = "README.md"

repository = "https://github.com/duplessisaurore/quark3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]

# Argument parsing helper
clap = { version = "4.5", features = ["derive", "wrap_help"] }
quark_map = { workspace = true }