[package]
name = "gluon_linker"
version = "2.1.0"
edition = "2024"
authors = ["The Quark3 Contributors"]

description = "The Gluon3 linker ontop of Boson3"
readme = "README.md"

repository = "https://github.com/duplessisaurore/quark3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]

# Argument parsing helper
clap = { version = "4.5", features = ["derive", "wrap_help"] }