[package]
name = "quark_debug"
version = "1.0.0"
edition = "2024"
authors = ["The Quark3 Contributors"]

description = "The Quark3 language's extra debugging capabilities for Lepton3"
readme = "README.md"

repository = "https://github.com/duplessisaurore/quark3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]
lepton3 = { workspace = true }
quark_map = { workspace = true }
hashbrown = { workspace = true }

[features]
default = ["parser", "writer"]

parser = []
writer = []