[package]
name = "quark_disasm"
version = "2.0.0"
edition = "2024"
authors = ["The Quark3 Contributors"]

description = "The Quark3 language's dissassembler"
readme = "README.md"

repository = "https://github.com/duplessisaurore/quark3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]
lepton3 = { workspace = true }
quark_map = { workspace = true }
quark_debug = { workspace = true }
quark_asm = { workspace = true }
hashbrown = { workspace = true }

[features]
default = ["floats"]
floats = []