[package]
name = "quark_map"
version = "1.0.0"
edition = "2024"
authors = ["The Quark3 Contributors"]

description = "The Quark3 mapping of the long and short instruction formats to opcodes"
readme = "README.md"

repository = "https://github.com/duplessisaurore/quark3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]
lepton3 = { workspace = true }