[package]
name = "quark_std_disasm"
version = "1.0.0"
edition = "2024"
authors = ["The Quark3 Contributors"]

description = "The Quark3 disassembler binary for rust_std supported systems."
readme = "README.md"

repository = "https://github.com/duplessisaurore/quark3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]
quark_disasm = { workspace = true }
quark_debug = { workspace = true }
lepton3 = { workspace = true }

# Argument parsing helper
clap = { version = "4.5", features = ["derive", "wrap_help"] }
